css/styles.css
/* IMPORT FONTS */

@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');

/* GLOBAL SETTINGS */

body {
    font-family: "Inter", sans-serif;
    font-weight: 400;
    line-height: 28px;
    color: #6a6a6a;
    font-size: 16px;
    background-color: #eff2f1;
    overflow-x: hidden;
    position: relative; 
}

a {
    text-decoration: none;
    -webkit-transition: .3s all ease;
    -o-transition: .3s all ease;
    transition: .3s all ease;
    color: #2f2f2f;
    text-decoration: underline;}
    a:hover {
      color: #2f2f2f;
      text-decoration: none; 
    }
    a.more {
      font-weight: 600; 
    }

.yellow-highlight {
    color: #f9bf29;
}
    
.green-highlight {
    color: #3b5d50;
}

/* LOCAL SETTINGS */

.navbar {
    transition: all 0.3s;
}

.custom-navbar {
    background: #3b5d50 !important;
    padding-top: 20px;
    padding-bottom: 20px; }
    .custom-navbar .navbar-brand {
        font-size: 32px;
        font-weight: 600; 
        color: #ffffff;}
    .custom-navbar .navbar-toggler {
        border-color: transparent; }
        .custom-navbar .navbar-toggler:active, .custom-navbar .navbar-toggler:focus {
        -webkit-box-shadow: none;
        box-shadow: none;
        outline: none; }
    @media (min-width: 992px) {
    .custom-navbar .custom-navbar-nav li {
    margin-left: 15px;
    margin-right: 15px; } }
    .custom-navbar .custom-navbar-nav li a {
        font-weight: 500;
        color: #ffffff !important;
        opacity: .5;
        -webkit-transition: .3s all ease;
        -o-transition: .3s all ease;
        transition: .3s all ease;
        position: relative; }
        @media (min-width: 768px) {
        .custom-navbar .custom-navbar-nav li a:before {
            content: "";
            position: absolute;
            bottom: 0;
            left: 8px;
            right: 8px;
            background: #f9bf29;
            height: 5px;
            opacity: 1;
            visibility: visible;
            width: 0;
            -webkit-transition: .15s all ease-out;
            -o-transition: .15s all ease-out;
            transition: .15s all ease-out; } }
        .custom-navbar .custom-navbar-nav li a:hover {
            opacity: 1; }
        .custom-navbar .custom-navbar-nav li a:hover:before {
            width: calc(100% - 16px); }
    .custom-navbar .custom-navbar-nav li.active a {
        opacity: 1; }
        .custom-navbar .custom-navbar-nav li.active a:before {
        width: calc(100% - 16px); }
    .custom-navbar .custom-navbar-cta {
        margin-left: 0 !important;
        -webkit-box-orient: horizontal;
        -webkit-box-direction: normal;
        -ms-flex-direction: row;
        flex-direction: row; }
        @media (min-width: 768px) {
        .custom-navbar .custom-navbar-cta {
            margin-left: 40px !important; } }
        .custom-navbar .custom-navbar-cta li {
        margin-left: 0px;
        margin-right: 0px; }
        .custom-navbar .custom-navbar-cta li:first-child {
            margin-right: 20px; 
}

.custom-navbar-scrolled {
    background: #eff2f1 !important;
    padding-top: 20px;
    padding-bottom: 20px; }
    .custom-navbar-scrolled .navbar-brand {
        font-size: 32px;
        font-weight: 600; 
        color: #3b5d50;}
        .custom-navbar-scrolled  .navbar-toggler {
        border-color: transparent;}
        .custom-navbar-scrolled  .navbar-toggler:active, .custom-navbar-scrolled  .navbar-toggler:focus {
        -webkit-box-shadow: none;
        box-shadow: none;
        outline: none; }
    @media (min-width: 992px) {
    .custom-navbar-scrolled .custom-navbar-nav li {
    margin-left: 15px;
    margin-right: 15px; } }
    .custom-navbar-scrolled  .custom-navbar-nav li a {
        font-weight: 500;
        color: #000000 !important;
        opacity: .5;
        -webkit-transition: .3s all ease;
        -o-transition: .3s all ease;
        transition: .3s all ease;
        position: relative; }
        @media (min-width: 768px) {
        .custom-navbar-scrolled  .custom-navbar-nav li a:before {
            content: "";
            position: absolute;
            bottom: 0;
            left: 8px;
            right: 8px;
            background: #3b5d50;
            height: 5px;
            opacity: 1;
            visibility: visible;
            width: 0;
            -webkit-transition: .15s all ease-out;
            -o-transition: .15s all ease-out;
            transition: .15s all ease-out; } }
        .custom-navbar-scrolled .custom-navbar-nav li a:hover {
            opacity: 1; }
        .custom-navbar-scrolled  .custom-navbar-nav li a:hover:before {
            width: calc(100% - 16px); }
    .custom-navbar-scrolled  .custom-navbar-nav li.active a {
        opacity: 1; }
        .custom-navbar-scrolled .custom-navbar-nav li.active a:before {
        width: calc(100% - 16px); }
    .custom-navbar-scrolled .custom-navbar-cta {
        margin-left: 0 !important;
        -webkit-box-orient: horizontal;
        -webkit-box-direction: normal;
        -ms-flex-direction: row;
        flex-direction: row; }
        @media (min-width: 768px) {
        .custom-navbar-scrolled .custom-navbar-cta {
            margin-left: 40px !important; } }
        .custom-navbar-scrolled .custom-navbar-cta li {
        margin-left: 0px;
        margin-right: 0px; }
        .custom-navbar-scrolled .custom-navbar-cta li:first-child {
            margin-right: 20px; 
}


.intro {
    background: #3b5d50;
    padding: calc(4rem - 30px) 0 0rem 0; 
    margin-top: 80px;
    overflow-x: hidden;
}
    
    @media (min-width: 768px) {
      .intro {
        padding: calc(4rem - 30px) 0 4rem 0; } }
    @media (min-width: 992px) {
      .intro {
        padding: calc(8rem - 30px) 0 8rem 0; } }
    .intro .intro-excerpt {
      position: relative;
      z-index: 4; }
      @media (min-width: 992px) {
        .intro .intro-excerpt {
          max-width: 450px; } }
    .intro h1 {
      font-weight: 700;
      color: #ffffff;
      margin-bottom: 30px; }
      @media (min-width: 1400px) {
        .intro h1 {
          font-size: 54px; } }
    .intro p {
      color: rgba(255, 255, 255, 0.5);
      margin-bottom: 30px; }
    .intro .intro-img-wrap {
      position: relative; }
      .intro .intro-img-wrap img {
        position: relative;
        top: 0px;
        right: 0px;
        z-index: 2;
        max-width: 500px;
        left: -20px;
        mask: url(/img/fluid-mask.png) center/contain no-repeat;}
        @media (min-width: 768px) {
          .intro .intro-img-wrap img {
            right: 0px;
            max-width: 500px;
            left: 0px; } }
        @media (min-width: 992px) {
          .intro .intro-img-wrap img {
            left: 0px;
            top: -80px;
            position: absolute;
            max-width: 500px;
            right: -50px; } }
        @media (min-width: 1200px) {
          .intro .intro-img-wrap img {
            left: 0px;
            top: -80px;
            right: -100px;
            max-width: 650px;
        } 
        }
.stack {
    padding: 5px;}
    .stack .tech-stack {
    border-radius: 30px;
    color: #2f2f2f;
    background: #f8b810;
    border-color: #f8b810;
    padding: 0.3rem 0.8rem;
    font-weight: 500;
    }

.btn {
  font-weight: 600;
  padding: 12px 30px;
  border-radius: 30px;
  color: #ffffff;
  background: #2f2f2f;
  border-color: #2f2f2f; }
  .btn:hover {
    color: #ffffff;
    background: #222222;
    border-color: #222222; }
  .btn:active, .btn:focus {
    outline: none !important;
    -webkit-box-shadow: none;
    box-shadow: none; }
  .btn.btn-primary {
    background: #3b5d50;
    border-color: #3b5d50; }
    .btn.btn-primary:hover {
      background: #314d43;
      border-color: #314d43; }
  .btn.btn-secondary {
    color: #2f2f2f;
    background: #f9bf29;
    border-color: #f9bf29; }
    .btn.btn-secondary:hover {
      background: #f8b810;
      border-color: #f8b810; }
  .btn.btn-white-outline {
    background: transparent;
    border-width: 2px;
    border-color: rgba(255, 255, 255, 0.3); }
    .btn.btn-white-outline:hover {
      border-color: white;
      color: #ffffff; }

.section-title {
    color: #2f2f2f; 
}

.sanbud-section {
    padding: 7rem 0 0 0;}
    .sanbud-section .sanbud-map img {
        width: 100%;
    }
    .sanbud-section .about-img-fluid {
        position: relative;
        mask: url(/img/fluid-mask-2.png) center/contain no-repeat;
        overflow: hidden;}
        @media (min-width: 0px) {
        .sanbud-section .about-img-fluid {
            max-width: 500px;
            left:-50px;
            mask: url(/img/fluid-mask-3.png) center/contain no-repeat;}
        } 
        @media (min-width: 767px) {
            .sanbud-section .about-img-fluid {
                max-width: 700px;
                left:20px;
                top: 50px;
                right: 0px;
                }
        } 
        @media (min-width: 1600px) {
            .sanbud-section .about-img-fluid {
                max-width: 850px;
                left:20px;
                top: 50px;
                right: 0px;
                }
            }  

/* SANBUD PLAN */
#Hoverable path:hover {
    fill: #f9bf29;
}


.contact {
    padding-bottom: 2rem;}
    .contact .email, .contact .phone {
        margin-top: 40px;
    }
    .contact a {
        text-decoration: none;
    }
    .contact h4 {
        padding: 0 0 0 60px;
        font-size: 22px;
        font-weight: 600;}
    .contact i {
        float: left;
        width: 44px;
        height: 44px;
        font-size: 20px;
        color: white;
        background: #3b5d50;
        display: flex;
        justify-content: center;
        align-items: center;
        border-radius: 50px;
        transition: all 0.2s ease-in-out;}
    .contact p {
        padding: 0 0 0 60px;
        font-size: 14px;}
    .contact .email:hover i, .contact .address:hover i, .contact .phone:hover i {
        background: #f9bf29;
        color: black;
    }

.google-map {
    height: 100%;
    width: 100%;
}

.footer-section {
    padding: 10rem 0 3rem 0;
    background: #eff2f1;}
    .footer-section .relative {
      position: relative; }
    .footer-section a {
      text-decoration: none;
      color: #2f2f2f;
      -webkit-transition: .3s all ease;
      -o-transition: .3s all ease;
      transition: .3s all ease; }
      .footer-section a:hover {
        color: rgba(47, 47, 47, 0.5); }
    .footer-section .border-top {
      border-color: #dce5e4; }
      .footer-section .border-top.copyright {
        font-size: 14px !important; }

